# auth-service

./: .env.example  .release-please-config.json  .terraform.lock.hcl  CHANGELOG.md  Makefile  Pipfile  README.md  dynamodb.tf  iam.tf  lambda.tf  package-lock.json  package.json  pyproject.toml  pytest.ini  serverless.yml  variables.tf
.github/workflows/: ci.yml  codeql-analysis.yml  release-please.yml  versioning.yml  workflow.yml
app/: __init__.py  api_handler.py  auth.py  exceptions.py  jwt_bearer.py  main.py  middlewares.py  models.py  repositories.py  repository.py  schemas.py  services.py  settings.py  utils.py
app/api/v1/: api.py
app/api/v1/routers/: auth_router.py
app/models/: jwt.py  token.py  user.py
app/models/request/: login.py  refresh.py  register.py
app/models/response/: error.py
app/repositories/: token_repository.py  user_repository.py
app/security/: authorization.py
app/services/: auth_service.py  token_service.py  user_service.py
infrastructure/: .terraform.lock.hcl  dynamodb.tf  iam.tf  lambda.tf  ssm.tf  variables.tf
tests/: conftest.py
tests/integration/: conftest.py  test_auth_api.py  test_correlation_id_middleware.py  test_rate_limiting_middleware.py
tests/unit/: conftest.py  test_app.py  test_auth.py  test_jwt_bearer.py
tests/unit/repository/: test_token_repository.py  test_user_repository.py
tests/unit/service/: test_auth_service.py  test_cache_service.py  test_token_service.py  test_user_service.py
