[project]
name = "auth-service"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "boto3>=1.42.44",
    "boto3-stubs[essential]>=1.42.44",
    "fastapi>=0.128.3",
    "httpx>=0.28.1",
    "mangum>=0.21.0",
    "pendulum>=3.2.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "ujson>=5.11.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools[validation]>=3.24.0",
    "bandit>=1.9.3",
    "moto>=5.1.20",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
    "ruff>=0.15.0",
    "time-machine>=3.2.0",
]
